add video functionality in the home page slider

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1654,19 +1654,6 @@
           "height": 0,
           "width": 0
         },
-        "58ceb416": {
-          "id": "58ceb416",
-          "path": "images/home/slide2.jpg",
-          "output": "images/home/slide2.jpg",
-          "name": "slide2.jpg",
-          "category": "IMAGE",
-          "size": 106654,
-          "type": "jpg",
-          "initialSize": 106654,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "03bea22f": {
           "id": "03bea22f",
           "path": "images/home/sliders_transparent_2.jpg",
@@ -1974,6 +1961,217 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "58ceb416": {
+          "id": "58ceb416",
+          "path": "images/home/slide2.jpg",
+          "output": "images/home/slide2.jpg",
+          "name": "slide2.jpg",
+          "category": "IMAGE",
+          "size": 147586,
+          "type": "jpg",
+          "initialSize": 147586,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a5c242b7": {
+          "id": "a5c242b7",
+          "path": "discount-program.html",
+          "output": "discount-program.html",
+          "name": "discount-program.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "41fa3fdb": {
+          "id": "41fa3fdb",
+          "path": "news-single.html",
+          "output": "news-single.html",
+          "name": "news-single.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "bd69482e": {
+          "id": "bd69482e",
+          "path": "news.html",
+          "output": "news.html",
+          "name": "news.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "be8f3947": {
+          "id": "be8f3947",
+          "path": "social-responsibility.html",
+          "output": "social-responsibility.html",
+          "name": "social-responsibility.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6aeeff39": {
+          "id": "6aeeff39",
+          "path": "config/compass.rb",
+          "output": "config/compass.rb",
+          "name": "compass.rb",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "rb"
+        },
+        "8f2fe89e": {
+          "id": "8f2fe89e",
+          "path": "images/mobile-os-w.png",
+          "output": "images/mobile-os-w.png",
+          "name": "mobile-os-w.png",
+          "category": "IMAGE",
+          "size": 6009,
+          "type": "png",
+          "initialSize": 6009,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "88425dae": {
+          "id": "88425dae",
+          "path": "images/mobile-os.png",
+          "output": "images/mobile-os.png",
+          "name": "mobile-os.png",
+          "category": "IMAGE",
+          "size": 6130,
+          "type": "png",
+          "initialSize": 6130,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "126d7fce": {
+          "id": "126d7fce",
+          "path": "images/paywing.jpg",
+          "output": "images/paywing.jpg",
+          "name": "paywing.jpg",
+          "category": "IMAGE",
+          "size": 100080,
+          "type": "jpg",
+          "initialSize": 100080,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1c920d7b": {
+          "id": "1c920d7b",
+          "path": "images/promo-test-01.jpg",
+          "output": "images/promo-test-01.jpg",
+          "name": "promo-test-01.jpg",
+          "category": "IMAGE",
+          "size": 81616,
+          "type": "jpg",
+          "initialSize": 81616,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d532d81d": {
+          "id": "d532d81d",
+          "path": "images/promo-test-02.jpg",
+          "output": "images/promo-test-02.jpg",
+          "name": "promo-test-02.jpg",
+          "category": "IMAGE",
+          "size": 94047,
+          "type": "jpg",
+          "initialSize": 94047,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6b6213ec": {
+          "id": "6b6213ec",
+          "path": "images/promo-test-03.jpg",
+          "output": "images/promo-test-03.jpg",
+          "name": "promo-test-03.jpg",
+          "category": "IMAGE",
+          "size": 103796,
+          "type": "jpg",
+          "initialSize": 103796,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "187b3a9f": {
+          "id": "187b3a9f",
+          "path": "images/s-m-an-w.png",
+          "output": "images/s-m-an-w.png",
+          "name": "s-m-an-w.png",
+          "category": "IMAGE",
+          "size": 3333,
+          "type": "png",
+          "initialSize": 3333,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "93d77b23": {
+          "id": "93d77b23",
+          "path": "images/s-m-an.png",
+          "output": "images/s-m-an.png",
+          "name": "s-m-an.png",
+          "category": "IMAGE",
+          "size": 3449,
+          "type": "png",
+          "initialSize": 3449,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7b775e72": {
+          "id": "7b775e72",
+          "path": "images/s-m-os-w.png",
+          "output": "images/s-m-os-w.png",
+          "name": "s-m-os-w.png",
+          "category": "IMAGE",
+          "size": 3751,
+          "type": "png",
+          "initialSize": 3751,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "678339c9": {
+          "id": "678339c9",
+          "path": "images/s-m-os.png",
+          "output": "images/s-m-os.png",
+          "name": "s-m-os.png",
+          "category": "IMAGE",
+          "size": 3861,
+          "type": "png",
+          "initialSize": 3861,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "087ec519": {
+          "id": "087ec519",
+          "path": "images/inner/FB-FindUsonFacebook-online-144.png",
+          "output": "images/inner/FB-FindUsonFacebook-online-144.png",
+          "name": "FB-FindUsonFacebook-online-144.png",
+          "category": "IMAGE",
+          "size": 2705,
+          "type": "png",
+          "initialSize": 2705,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
