add training module single

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2172,6 +2172,62 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "1c98c3ab": {
+          "id": "1c98c3ab",
+          "path": "agents.html",
+          "output": "agents.html",
+          "name": "agents.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "355fa1db": {
+          "id": "355fa1db",
+          "path": "js/home.js",
+          "output": "js/home-dist.js",
+          "name": "home.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "06ae6d20": {
+          "id": "06ae6d20",
+          "path": "css/_animate.css",
+          "output": "css/_animate-dist.css",
+          "name": "_animate.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "445fae6f": {
+          "id": "445fae6f",
+          "path": "images/FB-f-Logo__blue_29.png",
+          "output": "images/FB-f-Logo__blue_29.png",
+          "name": "FB-f-Logo__blue_29.png",
+          "category": "IMAGE",
+          "size": 1257,
+          "type": "png",
+          "initialSize": 1257,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
