--- a/prepros-6.config
+++ b/prepros-6.config
@@ -46,7 +46,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "ftp"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
