update biller list

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -43,10 +43,36 @@
         "scss/pages/_thankyou.scss",
         "scss/_mobile.scss"
       ]
+    },
+    {
+      "path": "scss/style.scss",
+      "imports": [
+        "scss/_fontawesome.scss",
+        "scss/_fonts.scss",
+        "scss/_variables.scss",
+        "scss/_mixins.scss",
+        "scss/_reset.scss",
+        "scss/_typography.scss",
+        "scss/_grid.scss",
+        "scss/_pace.scss",
+        "scss/_header.scss",
+        "scss/_footer.scss",
+        "scss/_main.scss",
+        "scss/abovefold/_home.scss",
+        "scss/abovefold/_inner.scss",
+        "scss/pages/_home.scss",
+        "scss/pages/_inner.scss",
+        "scss/pages/_news.scss",
+        "scss/pages/_careers.scss",
+        "scss/pages/_faq.scss",
+        "scss/pages/_404.scss",
+        "scss/pages/_thankyou.scss",
+        "scss/_mobile.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
